tests/fail/bang_in_filter.msh
[1 2 3] filter. "Hello" wle ['false']! end
